feat: change navigation launch method

--- a/Instructions README/7. Chairbot_Self_Organizing_Chair.md
+++ b/Instructions README/7. Chairbot_Self_Organizing_Chair.md
@@ -5,3 +5,8 @@ This will include all feature of chairbot
 - obstacle avoidance
 - vission system
 NOTE: Scripts will be written in python
+
+
+source devel/setup.bash
+
+roslaunch chairbot_multi main.launch
