feat: experiment with multi bot

--- a/Instructions README/7. Chairbot_Self_Organizing_Chair.md
+++ b/Instructions README/7. Chairbot_Self_Organizing_Chair.md
@@ -7,6 +7,38 @@ This will include all feature of chairbot
 NOTE: Scripts will be written in python
 
 
+echo 'export TURTLEBOT3_MODEL=waffle_pi' >> devel/setup.bash
+
 source devel/setup.bash
 
 roslaunch chairbot_multi main.launch
+
+roslaunch chairbot_multi multi_navigation.launch
+
+
+
+# Single
+roslaunch chairbot_simulation single_chair.launch
+
+roslaunch chairbot_navigation chairbot_navigation.launch
+
+rosrun chairbot_path_planning path_planning.py
+
+
+# Stats
+rosrun rqt_tf_tree rqt_tf_tree
+
+roswtf
+
+rosparam list
+
+rostopic list
+
+rosparam get 
+
+rostopic echo
+
+rosrun tf tf_echo map odom
+
+rosnode info /amcl
+
