feat: install teb_local_planner

--- a/Instructions README/7. Chairbot_Self_Organizing_Chair.md
+++ b/Instructions README/7. Chairbot_Self_Organizing_Chair.md
@@ -6,6 +6,7 @@ This will include all feature of chairbot
 - vission system
 NOTE: Scripts will be written in python
 
+rosdep install --from-paths . --ignore-src -r -y
 
 echo 'export TURTLEBOT3_MODEL=waffle_pi' >> devel/setup.bash
 
@@ -43,4 +44,6 @@ rostopic echo
 rosrun tf tf_echo map odom
 
 rosnode info /amcl
+
+rqt_graph
 
