chore: save temp

--- a/Instructions README/7. Chairbot_Self_Organizing_Chair.md
+++ b/Instructions README/7. Chairbot_Self_Organizing_Chair.md
@@ -18,6 +18,12 @@ roslaunch chairbot_multi multi_navigation.launch
 
 roslaunch chairbot_multi multi_navigation_gmapping.launch
 
+roslaunch ros_multi_tb3 2_tb3_house.launch
+
+roslaunch explore_lite explore_1.launch
+ 
+roslaunch explore_lite explore_2.launch
+
 
 
 # Single
@@ -46,4 +52,6 @@ rosrun tf tf_echo map odom
 rosnode info /amcl
 
 rqt_graph
+
+rosrun map_server map_saver -f src/ros_multi_tb3/maps/map2
 
