feat: testing colab

--- a/Instructions README/7. Chairbot_Self_Organizing_Chair.md
+++ b/Instructions README/7. Chairbot_Self_Organizing_Chair.md
@@ -20,6 +20,8 @@ roslaunch chairbot_multi multi_navigation_gmapping.launch
 
 roslaunch ros_multi_tb3 2_tb3_house.launch
 
+roslaunch ros_multi_tb3 multi_colab_slam.launch
+
 roslaunch explore_lite explore_1.launch
  
 roslaunch explore_lite explore_2.launch
