--- a/Instructions README/7. Chairbot_Self_Organizing_Chair.md
+++ b/Instructions README/7. Chairbot_Self_Organizing_Chair.md
@@ -22,6 +22,10 @@ roslaunch ros_multi_tb3 2_tb3_house.launch
 
 roslaunch ros_multi_tb3 multi_colab_slam.launch
 
+roslaunch ros_multi_tb3 custom_multi_tb3_office2.launch
+
+roslaunch explore_lite explore_0.launch
+
 roslaunch explore_lite explore_1.launch
  
 roslaunch explore_lite explore_2.launch
