feat: save world with tables

--- a/Instructions README/7. Chairbot_Self_Organizing_Chair.md
+++ b/Instructions README/7. Chairbot_Self_Organizing_Chair.md
@@ -18,6 +18,8 @@ roslaunch chairbot_multi multi_navigation.launch
 
 roslaunch chairbot_multi multi_navigation_gmapping.launch
 
+roslaunch ros_multi_tb3 custom_multi_tb3_office2.launch
+
 
 
 # Single
