feat: use 3 robots for mapping

--- a/Instructions README/6. Experiment_Multirobot_Mapping_and_Exploration.md
+++ b/Instructions README/6. Experiment_Multirobot_Mapping_and_Exploration.md
@@ -32,9 +32,19 @@ NOTE: Refer to the main Readme.md file for description of each package.
 
     $ roslaunch ros_multi_tb3 custom_multi_tb3_office2.launch
 
-    6. Launch each robot's exploration module.
+    6. Launch each robot's exploration module, individually with:
+
+    $ roslaunch explore_lite explore_0.launch
 
     $ roslaunch explore_lite explore_1.launch
  
     $ roslaunch explore_lite explore_2.launch
+
+    7. Or launch them all at once with:
+
+    $ roslaunch explore_lite explore_all.launch
+
+    8. Save map once mapping is finished.
+
+    $ rosrun map_server map_saver -f src/chairbot_navigation/maps/office_tables_2_map2
 
